<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClass"
    android:padding="20dp"
    android:background="@color/background_color">

  <TextView
      android:id="@+id/tv_register_title"
      style="@style/Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:text="Add Auction"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:id="@+id/add_item_linearLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="90dp"
      android:layout_marginBottom="60dp"
      app:layout_constraintBottom_toTopOf="@+id/btn_add_item"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_register_title">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_category"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Category"
          android:textColor="@color/grey_light"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/add_item_linearLayout"
          app:startIconDrawable="@drawable/baseline_category_24"
          app:startIconTint="@color/elements_color">

        <AutoCompleteTextView
            android:id="@+id/et_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_light"
            android:inputType="none" />

      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_name"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:hint="@string/item_name"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_category"
          app:startIconDrawable="@drawable/baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_name"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_medium"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:hint="@string/item_medium"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_name"
          app:startIconDrawable="@drawable/baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_medium"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_subject"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:hint="@string/item_subject"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_medium"
          app:startIconDrawable="@drawable/baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_subject"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_year"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:hint="@string/start_date"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_subject"
          app:startIconDrawable="@drawable/baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_year"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_size"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:hint="@string/duration"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_year"
          app:startIconDrawable="@drawable/baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_size"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_item_price"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:hint="@string/min_bid"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_size"
          app:startIconDrawable="@drawable/baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_price"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <TextView
          android:id="@+id/tv_upload_photo_title"
          style="@style/SubTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text=" Add Photo(s)"
          android:textColor="@color/grey"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_item_price" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_add_24" />

        <ImageView
            android:id="@+id/item_image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_shape"
            app:srcCompat="@drawable/baseline_add_24" />

        <ImageView
            android:id="@+id/item_image3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_shape"
            app:srcCompat="@drawable/baseline_add_24" />


      </LinearLayout>


    </LinearLayout>


  </ScrollView>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_add_item"
      style="@style/ButtonGreen"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="ADD"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>